--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
-    "mongoose": "^7.2.2"
+    "express-validator": "^7.0.1",
+    "mongoose": "^7.2.2",
+    "mongoose-bcrypt": "^1.10.1"
   }
 }
